--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "~4.16.1"
+    "express": "~4.16.1",
+    "mongoose": "^5.10.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
